# PS-fas-tva

./: .gitignore  BACKUP_SETUP.md  DEPLOYMENT.md  DEPLOYMENT_SETUP.md  DEPLOY_NOW.md  DEVELOPMENT_PROCESS.md  Habits.md  IMPLEMENTATION_STATUS.md  MIGRATE_RAILWAY_TO_VERCEL.md  QUICK_DEPLOY.md  README.md  SETUP_GIT.md  TESTING_PHASE1.md  backup-database.sh  check_db.js  check_db.py  docker-compose.yml  migrate-railway-to-neon.ps1  railway-backup.dump  railway.json  railway.toml  restore-database.sh  test_performance.sh
.github/workflows/: deploy.yml
backend/: .env.example  main.py  nixpacks.toml  pyproject.toml  railway-migrate.sh  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py  002_add_habit_version_description.py  003_fix_habit_completion_fk.py
backend/app/api/v1/: api.py
backend/app/api/v1/endpoints/: completions.py  goals.py  habits.py  health.py  users.py
backend/app/core/: auth.py  config.py  database.py  errors.py
backend/app/models/: __init__.py  goal.py  habit.py  habit_completion.py  habit_version.py  user.py
backend/app/schemas/: completion.py  goal.py  habit.py  user.py
backend/app/services/: completion_service.py  habit_service.py
backend/app/utils/: date_utils.py  validators.py
frontend/: .env.example  next.config.js  package.json  tsconfig.json  validate-build.sh
frontend/app/: globals.css  layout.tsx  page.tsx  providers.tsx
frontend/app/daily/: page.tsx
frontend/app/goals/: page.tsx
frontend/components/: Layout.tsx
frontend/lib/: apiClient.ts  auth.ts  dateUtils.ts  draftStorage.ts  habitUtils.ts  useAuthenticatedApi.ts
(+8 files in other folders)
